# TriStateSwitch

./: .gitignore  CMakeLists.txt  LICENSE.txt  Main.qml  README.md  TriStateSwitchBasic.qml  TriStateSwitchIndicatorBasic.qml  geometryutils.cpp  geometryutils.h  main.cpp  tristateswitch.cpp  tristateswitch.h
